# embedded-ai-vision

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  board_benchmark_report.md  mqtt_direct_result.json  mqtt_direct_test.py  mqtt_result.json  mqtt_result_direct.json  mqtt_subscribe_test.py
buildroot-external/: Config.in  external.desc  external.mk
buildroot-external/board/rk3399pro-custom/: boot.cmd  genimage.cfg  linux.fragment  post-image.sh  uboot.fragment
buildroot-external/configs/: rk3399pro_edge_ai_defconfig
buildroot-external/package/camera-sensor/: Config.in
buildroot-external/package/edge-ai-app/: Config.in  edge-ai-app.mk
buildroot-external/package/rknn-driver/: Config.in  rknn-driver.mk
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  EDGE_DEPLOY.md  NPU_REFERENCE.md  NPU_VERSION_GUIDE.md  PROTOCOL.md  TESTING.md  board_benchmark_results.md
edge/: CMakeLists.txt
edge/cmake/: aarch64-toolchain.cmake
edge/config/: edge-ai-camera.service  mosquitto-remote.conf  pipeline.yaml
edge/config/avahi/: edge-ai.service
edge/proto/: detection.proto  edge_service.proto
edge/scripts/: onnx_to_rknn.py
edge/src/: main.cpp
edge/src/comm/: detect_box.h  grpc_server.cpp  grpc_server.h  mqtt_publisher.cpp  mqtt_publisher.h  ota_manager.cpp  ota_manager.h
edge/src/inference/: rknn1_engine.cpp  rknn1_engine.h
edge/src/inference/deepsort/: hungarian.cpp  hungarian.h  kalman_filter.cpp  kalman_filter.h  tracker.cpp  tracker.h
edge/src/inference/yolov5/: decode.cpp  detect.h
edge/src/io/: file_input.cpp  file_input.h  rtsp_server.cpp  rtsp_server.h  v4l2_capture.cpp  v4l2_capture.h  video_encoder.cpp  video_encoder.h
edge/src/pipeline/: pipeline.cpp  pipeline.h  pipeline_config.cpp  pipeline_config.h
gstreamer/: CMakeLists.txt
gstreamer/plugin/: gstrknndraw.c  gstrknninference.c
kernel/config/: rk3399pro_edge_fragment.config
kernel/drivers/camera/: Kconfig  Makefile  imx415_v4l2.c  imx415_v4l2.h
kernel/drivers/npu/: Kconfig  Makefile  rknpu_drv.c  rknpu_drv.h
kernel/drivers/peripheral/: Kconfig  Makefile  gpio_trigger.c  spi_sensor.c  spi_sensor.h  uart_sensor.c
kernel/dts/rk3399pro/: rk3399pro-camera-imx415.dtsi  rk3399pro-edge-ai-camera.dts
scripts/: build_all.sh  gen_proto.sh
tmp_bench/: run_all_benchmarks.sh  serial_check.ps1  serial_fix_network.ps1  toybrick-server-optimized.sh
training/: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  requirements.txt
training/agl/: algorithm_manager.py
training/backend/: __init__.py  _compat.py  database.py  dtos.py  edge_client.py  enums.py  errors.py  events.py  models.py  mqtt_bridge.py  seed_data.py  service_facade.py  task_manager.py
training/backend/integrations/: __init__.py  agl_generation.py
training/backend/plugins/: __init__.py  contract.py  reflector.py  runner.py
training/backend/qt/: bridge.py
training/backend/repositories/: __init__.py  algorithm_repository.py  base.py  dataset_repository.py  edge_device_repository.py  log_repository.py  model_version_repository.py  settings_repository.py  task_repository.py
training/backend/services/: __init__.py  algorithm_service.py  base.py  cleaning_service.py  dataset_service.py  device_discovery_service.py  edge_manager_service.py  edge_service.py  evaluation_service.py  export_service.py  generation_service.py  sample_ordering.py  settings_service.py  training_service.py
training/backend/storage/: __init__.py  file_indexer.py  paths.py
training/core/: backend_catalog.py  database.py
training/core/data_cleaning/: data_cleaner.py  multi_modal_processor.py
training/core/data_management/: data_manager.py  file_processor.py
training/core/model_evaluation/: model_evaluator.py  performance_analyzer.py
training/core/models/: __init__.py  cleaning_suggestion.py  cleaning_task.py  dataset.py  enhancement_task.py  evaluation_result.py  evaluation_task.py  sample.py  system_log.py
training/core/sample_generation/: algorithm_manager.py  sample_generator.py
training/core/simulation_evaluation/: model_evaluator.py  performance_analyzer.py
training/docs/: ALGORITHM_PLUGIN_SPEC.md  BACKEND_ARCHITECTURE.md
training/docs/datasets/: 01_AIS数据集.md  02_五类场景测试展示数据集.md  03_声纳数据集.md  04_多模态数据集.md  05_故障诊断数据集.md  06_船舶目标检测数据集.md  07_语义分割-海岸线数据集.md  README.md
training/plugins/cleaning/: audio_denoise.py  audio_normalize.py  audio_trim_silence.py  duplicate_detector.py  image_deblur.py  image_denoise.py  image_near_duplicate_detector.py  tabular_missing_values.py  tabular_normalize.py  tabular_outliers.py  text_deduplicate.py  text_stemming.py  text_stopwords.py
training/plugins/evaluation/: hyfd_fault_evaluator.py  multi_agent_simulation.py  multimodal_fusion_evaluator.py  multimodal_seg_evaluator.py  sample_count_comparator.py  sonar_oltr_plud.py  timeseries_ship_evaluator.py  yolov5_evaluator.py
training/plugins/generation/: _device_utils.py  _image_io.py  back_translation_text_augmenter.py  channel_config_audio_augmenter.py  channel_shuffle_image_augmenter.py  clarity_image_augmenter.py  color_space_image_augmenter.py  composite_audio_augmenter.py  context_embedding_text_augmenter.py  copy_augmenter.py  crop_image_augmenter.py  cross_modal_fusion_image_augmenter.py  deformation_distortion_image_augmenter.py  diffusion_image_augmenter.py  energy_amplitude_audio_augmenter.py  environment_noise_injection_audio_augmenter.py  environment_simulation_image_augmenter.py  filter_processing_audio_augmenter.py  geometric_image_augmenter.py  halo_effect_image_augmenter.py  (+21 more)
training/scripts/: deploy_to_edge.sh  export_to_rknn1.py  parallel_download.py
training/tests/: _batch_add_parameters.py  test_backend_agl_integration.py  test_backend_algorithm_service.py  test_backend_chain.py  test_backend_compat.py  test_backend_dataset_service.py  test_backend_evaluation_service.py  test_backend_generation_service.py  test_backend_infrastructure.py  test_backend_task_and_cleaning.py  test_desktop_backend_contract.py  test_ui_guidance.py
training/ui/: HelpIcon.qml  StableComboBox.qml  Theme.qml  main_windows.qml  qmldir
(+38 files in other folders)
